Fixed service category page form submit button alignment. Added wpautop() to service category description.

--- a/style.css
+++ b/style.css
@@ -3307,6 +3307,10 @@ input.search-form__input:focus {
 	margin-top: 60px;
 }
 
+.service-row .form__submit {
+	text-align: left;
+}
+
 
 /**
  *  Service Row After Content
